--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "@lonlat/components",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "author": "Hugues Tavernier",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "prettier": "^3.0.0",
-    "typescript": "^5.1.6"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.63.6"
-  }
+    "name": "@lonlat/components",
+    "version": "1.0.0",
+    "description": "",
+    "keywords": [],
+    "author": "Hugues Tavernier",
+    "license": "ISC",
+    "main": "index.ts",
+    "devDependencies": {
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "eslint": "^8.44.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "prettier": "^3.0.0",
+        "typescript": "^5.1.6"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass": "^1.63.6"
+    }
 }
