--- a/libs/styles/package.json
+++ b/libs/styles/package.json
@@ -4,8 +4,5 @@
   "description": "",
   "keywords": [],
   "author": "Hugues Tavernier",
-  "license": "ISC",
-  "dependencies": {
-    "include-media": "^2.0.0"
-  }
+  "license": "ISC"
 }
