--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "storybook": "storybook dev -p 6006 --docs",
-        "storybook-all": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "dev-docs-only": "storybook dev -p 6006 --docs",
+        "dev": "storybook dev -p 6006",
+        "build": "storybook build"
     },
     "keywords": [],
     "author": "Hugues Tavernier",
@@ -16,20 +16,20 @@
         "react": "^18.2.0"
     },
     "devDependencies": {
-        "@storybook/addon-docs": "^7.0.26",
-        "@storybook/addon-essentials": "^7.0.26",
-        "@storybook/addon-links": "^7.0.26",
-        "@storybook/blocks": "^7.0.26",
-        "@storybook/manager-api": "^7.0.26",
-        "@storybook/react": "^7.0.26",
-        "@storybook/react-vite": "^7.0.26",
-        "@storybook/testing-library": "^0.0.14-next.2",
-        "@storybook/theming": "^7.0.26",
+        "@storybook/addon-docs": "^7.0.27",
+        "@storybook/addon-essentials": "^7.0.27",
+        "@storybook/addon-links": "^7.0.27",
+        "@storybook/blocks": "^7.0.27",
+        "@storybook/manager-api": "^7.0.27",
+        "@storybook/react": "^7.0.27",
+        "@storybook/react-vite": "^7.0.27",
+        "@storybook/testing-library": "0.0.14-next.2",
+        "@storybook/theming": "^7.0.27",
         "@types/react": "^18.2.14",
         "prop-types": "^15.8.1",
         "react-dom": "^18.2.0",
         "sass": "^1.63.6",
-        "storybook": "^7.0.26",
+        "storybook": "^7.0.27",
         "typescript": "^5.1.6",
         "vite": "^4.4.3"
     }
