--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.63.6"
+        "sass": "^1.63.6",
+        "usehooks-ts": "^2.9.1"
     }
 }
