--- a/apps/vite-sandbox/package.json
+++ b/apps/vite-sandbox/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@floating-ui/react": "^0.24.7",
         "@lonlat/components": "link:../../libs/components",
         "@lonlat/styles": "link:../../libs/styles",
         "react": "^18.2.0",
