--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -12,6 +12,7 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "@floating-ui/react": "^0.24.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.63.6",
