--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -1,15 +1,28 @@
 {
     "name": "@lonlat/components",
     "version": "1.0.0",
+    "private": true,
     "description": "",
     "keywords": [],
     "author": "Hugues Tavernier",
     "license": "ISC",
     "main": "index.ts",
+    "scripts": {
+        "test": "vitest",
+        "test:ui": "vitest --ui"
+    },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
-        "typescript": "^5.1.6"
+        "@types/testing-library__jest-dom": "^5.14.8",
+        "@vitejs/plugin-react-swc": "^3.3.2",
+        "@vitest/ui": "^0.33.0",
+        "jsdom": "^22.1.0",
+        "typescript": "^5.1.6",
+        "vite": "^4.4.4",
+        "vitest": "^0.33.0"
     },
     "dependencies": {
         "@floating-ui/react": "^0.24.7",
