--- a/apps/vite-sandbox/package.json
+++ b/apps/vite-sandbox/package.json
@@ -11,8 +11,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.24.7",
-        "@lonlat/components": "link:../../libs/components",
-        "@lonlat/styles": "link:../../libs/styles",
+        "@lonlat/shared": "link:../../extra/shared",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.63.6"
