--- a/extra/shared/package.json
+++ b/extra/shared/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.24.7",
+        "@lonlat/fonts": "link:../fonts/dist",
         "classnames": "^2.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
