--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -11,11 +11,13 @@
     "author": "Hugues Tavernier",
     "license": "ISC",
     "dependencies": {
+        "@floating-ui/react": "^0.24.7",
         "@lonlat/fonts": "link:../../extra/fonts/dist",
         "@lonlat/shared": "link:../../extra/shared",
         "react": "^18.2.0"
     },
     "devDependencies": {
+        "@storybook/addon-actions": "^7.1.0",
         "@storybook/addon-docs": "^7.0.27",
         "@storybook/addon-essentials": "^7.0.27",
         "@storybook/addon-links": "^7.0.27",
