--- a/extra/fonts/config.json
+++ b/extra/fonts/config.json
@@ -47,6 +47,62 @@
       "css": "star-half",
       "code": 61731,
       "src": "fontawesome"
+    },
+    {
+      "uid": "12b0c3d6aa19e163c7bf690f22e3bc0e",
+      "css": "angle-down",
+      "code": 59398,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M393.4 669.1C417.8 693.6 457.4 693.6 481.8 669.1L794.3 356.6C818.8 332.2 818.8 292.6 794.3 268.2S730.3 243.8 705.9 268.2L437.5 536.5 169.1 268.4C144.7 243.9 105.1 243.9 80.7 268.4S56.2 332.4 80.7 356.8L393.2 669.3Z",
+        "width": 875
+      },
+      "search": [
+        "angle-down"
+      ]
+    },
+    {
+      "uid": "6de8cfafb88689576a8de1029304d2f2",
+      "css": "angle-up",
+      "code": 59399,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M393.4 268.4C417.8 243.9 457.4 243.9 481.8 268.4L794.3 580.9C818.8 605.3 818.8 644.9 794.3 669.3S730.3 693.8 705.9 669.3L437.5 401 169.1 669.1C144.7 693.6 105.1 693.6 80.7 669.1S56.2 605.1 80.7 580.7L393.2 268.2Z",
+        "width": 875
+      },
+      "search": [
+        "angle-up"
+      ]
+    },
+    {
+      "uid": "dd8192bdcb326742593827bc1c8b5266",
+      "css": "chevron-down",
+      "code": 59400,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M455.9 794.1C480.3 818.6 519.9 818.6 544.3 794.1L919.3 419.1C943.8 394.7 943.8 355.1 919.3 330.7S855.3 306.3 830.9 330.7L500 661.5 169.1 330.9C144.7 306.4 105.1 306.4 80.7 330.9S56.2 394.9 80.7 419.3L455.7 794.3Z",
+        "width": 1000
+      },
+      "search": [
+        "chevron-down"
+      ]
+    },
+    {
+      "uid": "d69df2d88c08c5b7931995bfbd61b927",
+      "css": "chevron-up",
+      "code": 59401,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M455.9 205.9C480.3 181.4 519.9 181.4 544.3 205.9L919.3 580.9C943.8 605.3 943.8 644.9 919.3 669.3S855.3 693.8 830.9 669.3L500 338.5 169.1 669.1C144.7 693.6 105.1 693.6 80.7 669.1S56.2 605.1 80.7 580.7L455.7 205.7Z",
+        "width": 1000
+      },
+      "search": [
+        "chevron-up"
+      ]
     }
   ]
 }
