component autocomplete basic implementation

--- a/apps/storybook/.storybook/public/config.json
+++ b/apps/storybook/.storybook/public/config.json
@@ -77,32 +77,10 @@
       ]
     },
     {
-      "uid": "dd8192bdcb326742593827bc1c8b5266",
-      "css": "chevron-down",
+      "uid": "9dd9e835aebe1060ba7190ad2b2ed951",
+      "css": "search",
       "code": 59400,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M455.9 794.1C480.3 818.6 519.9 818.6 544.3 794.1L919.3 419.1C943.8 394.7 943.8 355.1 919.3 330.7S855.3 306.3 830.9 330.7L500 661.5 169.1 330.9C144.7 306.4 105.1 306.4 80.7 330.9S56.2 394.9 80.7 419.3L455.7 794.3Z",
-        "width": 1000
-      },
-      "search": [
-        "chevron-down"
-      ]
-    },
-    {
-      "uid": "d69df2d88c08c5b7931995bfbd61b927",
-      "css": "chevron-up",
-      "code": 59401,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M455.9 205.9C480.3 181.4 519.9 181.4 544.3 205.9L919.3 580.9C943.8 605.3 943.8 644.9 919.3 669.3S855.3 693.8 830.9 669.3L500 338.5 169.1 669.1C144.7 693.6 105.1 693.6 80.7 669.1S56.2 605.1 80.7 580.7L455.7 205.7Z",
-        "width": 1000
-      },
-      "search": [
-        "chevron-up"
-      ]
+      "src": "fontawesome"
     }
   ]
 }
