--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "description": "",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "swagger": "pnpm run --filter @lonlat/swagger swagger"
     },
     "keywords": [],
     "author": "Hugues Tavernier",
