--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -18,20 +18,21 @@
     },
     "devDependencies": {
         "@storybook/addon-actions": "^7.1.0",
-        "@storybook/addon-docs": "^7.0.27",
-        "@storybook/addon-essentials": "^7.0.27",
-        "@storybook/addon-links": "^7.0.27",
-        "@storybook/blocks": "^7.0.27",
-        "@storybook/manager-api": "^7.0.27",
-        "@storybook/react": "^7.0.27",
-        "@storybook/react-vite": "^7.0.27",
-        "@storybook/testing-library": "0.0.14-next.2",
-        "@storybook/theming": "^7.0.27",
+        "@storybook/addon-docs": "^7.1.0",
+        "@storybook/addon-essentials": "^7.1.0",
+        "@storybook/addon-links": "^7.1.0",
+        "@storybook/addon-mdx-gfm": "^7.1.0",
+        "@storybook/blocks": "^7.1.0",
+        "@storybook/manager-api": "^7.1.0",
+        "@storybook/react": "^7.1.0",
+        "@storybook/react-vite": "^7.1.0",
+        "@storybook/testing-library": "0.2.0",
+        "@storybook/theming": "^7.1.0",
         "@types/react": "^18.2.14",
         "prop-types": "^15.8.1",
         "react-dom": "^18.2.0",
         "sass": "^1.63.6",
-        "storybook": "^7.0.27",
+        "storybook": "^7.1.0",
         "typescript": "^5.1.6",
         "vite": "^4.4.3"
     }
