--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -14,6 +14,7 @@
         "@floating-ui/react": "^0.24.7",
         "@lonlat/fonts": "link:../../extra/fonts/dist",
         "@lonlat/shared": "link:../../extra/shared",
+        "fuse.js": "^6.6.2",
         "react": "^18.2.0"
     },
     "devDependencies": {
