--- a/apps/vite-sandbox/package.json
+++ b/apps/vite-sandbox/package.json
@@ -14,10 +14,12 @@
         "@lonlat/fonts": "link:../../extra/fonts/dist",
         "@lonlat/react-maplibre": "link:../../extra/react-maplibre",
         "@lonlat/shared": "link:../../extra/shared",
+        "fuse.js": "^6.6.2",
         "maplibre-gl": "^3.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.63.6"
+        "sass": "^1.63.6",
+        "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.14",
