--- a/extra/shared/package.json
+++ b/extra/shared/package.json
@@ -31,6 +31,7 @@
         "fuse.js": "^6.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-polymorphic-types": "^2.0.0",
         "sass": "^1.63.6",
         "usehooks-ts": "^2.9.1"
     }
