--- a/extra/maplibre-ext/package.json
+++ b/extra/maplibre-ext/package.json
@@ -8,6 +8,7 @@
     "license": "ISC",
     "main": "src/index.ts",
     "dependencies": {
+        "@lonlat/shared": "link:../shared",
         "@mapbox/point-geometry": "^0.1.0",
         "maplibre-gl": "^3.2.0"
     }
