--- a/extra/maplibre-react/package.json
+++ b/extra/maplibre-react/package.json
@@ -28,6 +28,7 @@
         "@floating-ui/react": "^0.24.7",
         "@lonlat/fonts": "link:../fonts/dist",
         "@lonlat/maplibre-ext": "link:../maplibre-ext",
+        "@lonlat/shared": "link:../shared",
         "classnames": "^2.3.2",
         "maplibre-gl": "^3.2.0",
         "react": "^18.2.0",
