documentation map vector tiles

--- a/apps/maplibre-sandbox/package.json
+++ b/apps/maplibre-sandbox/package.json
@@ -15,12 +15,15 @@
         "@lonlat/maplibre-ext": "link:../../extra/maplibre-ext",
         "@lonlat/maplibre-react": "link:../../extra/maplibre-react",
         "@lonlat/shared": "link:../../extra/shared",
+        "@mapbox/mapbox-gl-draw": "^1.4.2",
+        "@turf/turf": "^6.5.0",
         "maplibre-gl": "^3.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.63.6"
     },
     "devDependencies": {
+        "@types/mapbox__mapbox-gl-draw": "^1.4.0",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
         "@vitejs/plugin-react-swc": "^3.3.2",
