--- a/apps/maplibre-sandbox/package.json
+++ b/apps/maplibre-sandbox/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@floating-ui/dom": "^1.5.1",
         "@floating-ui/react": "^0.24.7",
         "@lonlat/fonts": "link:../../extra/fonts/dist",
         "@lonlat/maplibre-ext": "link:../../extra/maplibre-ext",
@@ -17,6 +18,7 @@
         "@lonlat/shared": "link:../../extra/shared",
         "@mapbox/mapbox-gl-draw": "^1.4.2",
         "@turf/turf": "^6.5.0",
+        "mapbox-gl-controls": "^2.3.5",
         "maplibre-gl": "^3.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -24,6 +26,7 @@
     },
     "devDependencies": {
         "@types/mapbox__mapbox-gl-draw": "^1.4.0",
+        "@types/mapbox__point-geometry": "^0.1.2",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
         "@vitejs/plugin-react-swc": "^3.3.2",
