--- a/extra/maplibre-ext/package.json
+++ b/extra/maplibre-ext/package.json
@@ -8,8 +8,12 @@
     "license": "ISC",
     "main": "src/index.ts",
     "dependencies": {
+        "@floating-ui/dom": "^1.5.1",
         "@lonlat/shared": "link:../shared",
         "@mapbox/point-geometry": "^0.1.0",
         "maplibre-gl": "^3.2.0"
+    },
+    "devDependencies": {
+        "@types/mapbox__point-geometry": "^0.1.2"
     }
 }
