--- a/apps/maplibre-sandbox/package.json
+++ b/apps/maplibre-sandbox/package.json
@@ -18,8 +18,11 @@
         "@lonlat/shared": "link:../../extra/shared",
         "@mapbox/mapbox-gl-draw": "^1.4.2",
         "@turf/turf": "^6.5.0",
+        "@types/proj4": "^2.5.2",
         "mapbox-gl-controls": "^2.3.5",
+        "mapbox-gl-fps": "^1.0.1",
         "maplibre-gl": "^3.2.0",
+        "proj4": "^2.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.63.6"
@@ -27,6 +30,7 @@
     "devDependencies": {
         "@types/mapbox__mapbox-gl-draw": "^1.4.0",
         "@types/mapbox__point-geometry": "^0.1.2",
+        "@types/node": "^20.4.6",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
         "@vitejs/plugin-react-swc": "^3.3.2",
