--- a/extra/shared/package.json
+++ b/extra/shared/package.json
@@ -11,6 +11,7 @@
         "test": "vitest",
         "test:ui": "vitest --ui"
     },
+    "type": "module",
     "devDependencies": {
         "@testing-library/jest-dom": "^6.1.5",
         "@testing-library/react": "^14.1.2",
