move stories into extra/shared/components

--- a/extra/shared/tsconfig.json
+++ b/extra/shared/tsconfig.json
@@ -5,12 +5,18 @@
             "@testing-library/jest-dom"
         ],
         "paths": {
-            // "@storybook/react": [
-            //     "../../apps/storybook/node_modules/@storybook/react"
-            // ],
-            // "@storybook/addon-actions": [
-            //     "../../apps/storybook/node_modules/@storybook/addon-actions"
-            // ]
+            "@lonlat/shared": [
+                "."
+            ],
+            "@lonlat/shared/*": [
+                "./*"
+            ],
+            "@storybook/react": [
+                "../../apps/storybook/node_modules/@storybook/react"
+            ],
+            "@storybook/addon-actions": [
+                "../../apps/storybook/node_modules/@storybook/addon-actions"
+            ]
         }
     }
 }
