fix pnpm workspace dependencies

--- a/apps/maplibre-sandbox/package.json
+++ b/apps/maplibre-sandbox/package.json
@@ -13,10 +13,10 @@
     "dependencies": {
         "@floating-ui/dom": "^1.5.3",
         "@floating-ui/react": "^0.26.4",
-        "@lonlat/fonts": "link:../../extra/fonts/dist",
-        "@lonlat/maplibre-ext": "link:../../extra/maplibre-ext",
-        "@lonlat/maplibre-react": "link:../../extra/maplibre-react",
-        "@lonlat/shared": "link:../../extra/shared",
+        "@lonlat/fonts": "workspace:*",
+        "@lonlat/maplibre-ext": "workspace:*",
+        "@lonlat/maplibre-react": "workspace:*",
+        "@lonlat/shared": "workspace:*",
         "@mapbox/mapbox-gl-draw": "^1.4.3",
         "@turf/turf": "^6.5.0",
         "@types/proj4": "^2.5.5",
