--- a/apps/maplibre-react-sandbox/package.json
+++ b/apps/maplibre-react-sandbox/package.json
@@ -11,10 +11,10 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.4",
-        "@lonlat/fonts": "link:../../extra/fonts/dist",
-        "@lonlat/maplibre-ext": "link:../../extra/maplibre-ext",
-        "@lonlat/maplibre-react": "link:../../extra/maplibre-react",
-        "@lonlat/shared": "link:../../extra/shared",
+        "@lonlat/fonts": "workspace:*",
+        "@lonlat/maplibre-ext": "workspace:*",
+        "@lonlat/maplibre-react": "workspace:*",
+        "@lonlat/shared": "workspace:*",
         "maplibre-gl": "^3.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
