--- a/extra/maplibre-ext/package.json
+++ b/extra/maplibre-ext/package.json
@@ -9,7 +9,7 @@
     "main": "src/index.ts",
     "dependencies": {
         "@floating-ui/dom": "^1.5.3",
-        "@lonlat/shared": "link:../shared",
+        "@lonlat/shared": "workspace:*",
         "@mapbox/point-geometry": "^0.1.0",
         "maplibre-gl": "^3.6.2"
     },
