--- a/extra/maplibre-react/package.json
+++ b/extra/maplibre-react/package.json
@@ -25,9 +25,9 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.4",
-        "@lonlat/fonts": "link:../fonts/dist",
-        "@lonlat/maplibre-ext": "link:../maplibre-ext",
-        "@lonlat/shared": "link:../shared",
+        "@lonlat/fonts": "workspace:*",
+        "@lonlat/maplibre-ext": "workspace:*",
+        "@lonlat/shared": "workspace:*",
         "classnames": "^2.3.2",
         "maplibre-gl": "^3.6.2",
         "react": "^18.2.0",
