--- a/extra/shared/package.json
+++ b/extra/shared/package.json
@@ -26,7 +26,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.4",
-        "@lonlat/fonts": "link:../fonts/dist",
+        "@lonlat/fonts": "workspace:*",
         "classnames": "^2.3.2",
         "fuse.js": "^7.0.0",
         "react": "^18.2.0",
