--- a/apps/api/config/packages/api_platform.yaml
+++ b/apps/api/config/packages/api_platform.yaml
@@ -16,3 +16,12 @@ api_platform:
             rfc_7807_compliant_errors: true
     event_listeners_backward_compatibility_layer: false
     keep_legacy_inflector: false
+    swagger:
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
+        # https://github.com/swagger-api/swagger-ui/blob/master/docs/usage/configuration.md
+        swagger_ui_extra_configuration:
+            persistAuthorization: true
+            displayOperationId: true
