--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,36 @@
 {
-    "root": true,
-    "env": {
-        "browser": true,
-        "es2020": true
-    },
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react-hooks/recommended",
-        "plugin:prettier/recommended"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react-refresh"
-    ],
-    "rules": {
-        "react-refresh/only-export-components": "warn",
-        "@typescript-eslint/no-explicit-any": "off"
-    },
-    "overrides": [
-        {
-            "files": [
-                "*.cjs",
-                "*.mjs"
-            ],
-            "env": {
-                "node": true
-            }
-        }
-    ]
+  "root": true,
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react-refresh"
+  ],
+  "rules": {
+    "react-refresh/only-export-components": "off",
+    "@typescript-eslint/no-explicit-any": "off"
+  },
+  "overrides": [
+    {
+      "files": [
+        "*.cjs",
+        "*.mjs"
+      ],
+      "env": {
+        "node": true
+      }
+    }
+  ]
 }
